--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "poc_lr_parser",
+  "version": "1.0.0",
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@cyann/ts-commons": "file:../ts-commons"
+  },
+  "scripts": {
+    "start": "ts-node ./src/index.ts"
   }
 }
